2.0.0
--------
Removed applied fluidicts from questbook

Updated Mods:
Calculator
Sonar Core
Removed Applied Llamagistics
Removed Applied fluidics
Added Applied Energistics
Added Extra Cells



1.8.0
----------
Added lost city portal item with details on getting to the LC dim
Adjusted LC dim city spawn rate and changed to no explosion profile
Added jei info on skystone dust needing steel hammer
Vector plates now give 4 per craft
Changed a couple recipes to accept oredict glowstone
Reduced RF cost of charged drac, added calc lightning tower as additional charging method
Fixed otherworldly blood quest not detecting
Made iron spikes recipe easier
Added warning for applied llamagistics -> applied energistics switch over
Removed basic flint tools from silent's gems
Removed calc circuit storage chamber for being a buggy mess

1.7.1
----------
Downgraded Forge to previous version - caused more problem than it solved

1.7.0
----------
Fixed enchantment token recipes being all removed
Added recipes for starmetal dust to be smelted like the ore
Added recipes for factory blocks while chisel is being weird
Changed recipe for creative watering can since crated items are broken on servers
Fixed some quests not detecting items properly (mithril can, celestial altar, creative gas/fluid tank)
Continued my journey of trying to make various types of modded metals play nice
Removed alkahestry tome (should have been removed a few versions ago)
Lots of new additions to the loot tables 
Jungle arrow traps are much more deadly
Added another recipe for piercing vengeance focus
Added vengeance essence to vindicator mob and crafting recipe for the mob's egg
Added blood/flesh/emerald to vanilla villager drops
Added JER but properly configured this time
Buffed alt recipe for enriched chaos which is more automatable 
Removed redorchid from grass drops
Added recipes for crafting redorchid
Added custom stargazing and lava fountain rooms to the top of some lostcity skyscrapers
Mod Updates: