@@ -3357,6 +3357,8 @@ comforts {
 contenttweaker {
     B:antiice=false
     B:chargediridium=true
+    B:holylog=true
+    B:holyplank=true
     B:irradiatediridium=true
     B:obsidiancase=true
     B:platslurry=true
