@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Wed Jan 03 20:37:02 EST 2018
+#Sun Jan 07 17:58:17 EST 2018
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
