@@ -216,7 +216,7 @@ world110621352 {
 
     # Hide and unhide items by clicking them in the item list.
     B:editEnabled=false
-    S:filterText=@extra format
+    S:filterText=cert
 
     # Show the list of items next to open guis.
     B:overlayEnabled=true
