@@ -1,5 +1,5 @@
 #Splash screen properties
-#Wed Jan 03 20:34:00 EST 2018
+#Sun Jan 07 17:55:50 EST 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
