@@ -6,6 +6,8 @@ tile.contenttweaker.obsidiancase.name=Obsidian Case
 tile.contenttweaker.platslurry.name=Platinum Slurry
 tile.contenttweaker.scrapelec.name=Scrapped Electronics
 tile.contenttweaker.dblood.name=Otherworldly Blood
+tile.contenttweaker.holylog.name=Holy Wood
+tile.contenttweaker.holyplank.name=Holy Wood Planks
 item.contenttweaker.dblood.name=Otherworldly Blood
 item.contenttweaker.entitykiller.name=Entity Killer
 item.contenttweaker.advancedcase.name=Advanced Case
