@@ -1,7 +1,6 @@
 //This file was created via CT-GUI! Editing it is not advised!
 //Don't touch me!
 //#Remove
-
 //Don't touch me!
 //#Add
 //File End
